feat: N random or single random as parameters (RandomHelper class)